change name, add API docs

--- a/Readme.org
+++ b/Readme.org
@@ -1,6 +1,7 @@
-#+TITLE:  Registers
+#+TITLE:  Bounded Registers
 
-A high-assurance register code generation and interaction library.
+A high-assurance memory-mapped register code generation and
+interaction library.
 
 * Install
 
@@ -11,7 +12,7 @@ $ cd registers && cargo install
 
 * Use
 
-There are two core pieces to ~registers~:
+There are two core pieces to ~bounded-registers~:
 
 ** I. The macro
 
@@ -21,8 +22,8 @@ register! {
     u8,
     RW,
     Fields [
-        On WIDTH(U1) OFFSET(U0),
-        Dead WIDTH(U1) OFFSET(U1),
+        On    WIDTH(U1) OFFSET(U0),
+        Dead  WIDTH(U1) OFFSET(U1),
         Color WIDTH(U3) OFFSET(U2) [
             Red = U1,
             Blue = U2,
@@ -193,9 +194,79 @@ fn main() {
 }
 #+END_SRC
 
+* The Register API
+
+The register API code is generated with docs, but you'll have to build
+the rustdoc documentation for your library that uses
+~bounded-registers~ to be able to see it. For convenience, I've
+extrapolated it here:
+
+#+BEGIN_SRC rust
+  impl Register {
+      /// `new` constructs a read-write register around the
+      /// given pointer.
+      pub fn new(init: Width) -> Self;
+
+      /// `get_field` takes a field and sets the value of that
+      /// field to its value in the register.
+      pub fn get_field<M: Unsigned, O: Unsigned, U: Unsigned>(
+          &self,
+          f: F<Width, M, O, U, Register>,
+      ) -> Option<F<Width, M, O, U, Register>>
+      where
+          U: IsGreater<U0, Output = True> + ReifyTo<Width>,
+          M: ReifyTo<Width>,
+          O: ReifyTo<Width>,
+          U0: ReifyTo<Width>;
+
+      /// `read` returns the current state of the register as a `Width`.
+      pub fn read(&self) -> Width;
+
+      /// `extract` pulls the state of a register out into a wrapped
+      /// read-only register.
+      pub fn extract(&self) -> ReadOnlyCopy<Width, Register>;
+
+      /// `is_set` takes a field and returns true if that field's value
+      /// is equal to its upper bound or not. This is of particular use
+      /// in single-bit fields.
+      pub fn is_set<M: Unsigned, O: Unsigned, U: Unsigned>(
+          &self,
+          f: F<Width, M, O, U, Register>,
+      ) -> bool
+      where
+          U: IsGreater<U0, Output = True>,
+          U: ReifyTo<Width>,
+          M: ReifyTo<Width>,
+          O: ReifyTo<Width>;
+
+      // `Positioned` is a special trait that all fields implement, as
+      // well as a type used as an accumulator when reading from or
+      // writing to multiple fields. To use these functions with
+      // multiple fields, join them together with `+`. An `Add`
+      // implementation for fields has been provided for this purpose.
+
+      /// `matches_any` returns whether or not any of the given fields
+      /// match those fields values inside the register.
+      pub fn matches_any<V: Positioned<Width = Width>>(&self, val: V) -> bool;
+
+      /// `matches_all` returns whether or not all of the given fields
+      /// match those fields values inside the register.
+      pub fn matches_all<V: Positioned<Width = Width>>(&self, val: V) -> bool;
+
+      /// `modify` takes one or more fields, joined by `+`, and
+      /// sets those fields in the register, leaving the others
+      /// as they were.
+      pub fn modify<V: Positioned<Width = Width>>(&mut self, val: V);
+
+      /// `write` sets the value of the whole register to the
+      /// given `Width` value.
+      pub fn write(&mut self, val: Width);
+  }
+#+END_SRC
+
 * Theory
 
-~registers~ employs values—specifically numbers—at the type-level in
+~bounded-registers~ employs values—specifically numbers—at the type-level in
 order to get compile time assertions on interactions with a
 register. Each field's width is used to determine a maximum value, and
 then reading from and writing to those fields is either checked at
